scripts/nullaway/wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8.txt
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Schema.java:79: error: [NullAway] dereferenced expression schema is @Nullable
        initField(fldno, schema.types[srcno], schema.lengths[srcno], schema.names[srcno]);
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Schema.java:91: error: [NullAway] dereferenced expression s1 is @Nullable
        int s1cnt = s1.getCount();
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Schema.java:92: error: [NullAway] dereferenced expression s2 is @Nullable
        int s2cnt = s2.getCount();
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Convert.java:17: error: [NullAway] dereferenced expression data is @Nullable
        return (char) data[pos];
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Convert.java:28: error: [NullAway] dereferenced expression data is @Nullable
        data[pos] = (byte) value;
            ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Convert.java:38: error: [NullAway] dereferenced expression data is @Nullable
        return (short) (((data[pos] & 0xff) << 8) | (data[pos + 1] & 0xff));
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Convert.java:47: error: [NullAway] dereferenced expression data is @Nullable
        data[pos] = (byte) ((value >> 8) & 0xff);
            ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Convert.java:58: error: [NullAway] dereferenced expression data is @Nullable
        return ((data[pos] & 0xff) << 24) | ((data[pos + 1] & 0xff) << 16) | ((data[pos + 2] & 0xff) << 8) | (data[pos + 3] & 0xff);
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Convert.java:67: error: [NullAway] dereferenced expression data is @Nullable
        data[pos] = (byte) ((value >> 24) & 0xff);
            ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Convert.java:102: error: [NullAway] dereferenced expression data is @Nullable
        int buflen = data.length - pos;
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/global/Convert.java:117: error: [NullAway] dereferenced expression value is @Nullable
        byte[] ba = value.getBytes();
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/externalSort/SortMergeJoin.java:148: error: [NullAway] dereferenced expression join1.iter is @Nullable
        while (join1.iter.hasNext()) {
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/externalSort/SortMergeJoin.java:179: error: [NullAway] dereferenced expression iter is @Nullable
        return iter.hasNext();
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/externalSort/SortMergeJoin.java:185: error: [NullAway] dereferenced expression iter is @Nullable
            return iter.next();
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Iterator.java:77: error: [NullAway] dereferenced expression getSchema() is @Nullable
        getSchema().print();
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Iterator.java:79: error: [NullAway] dereferenced expression getNext() is @Nullable
            getNext().print();
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Tuple.java:35: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.schema = schema;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Tuple.java:36: error: [NullAway] dereferenced expression schema is @Nullable
        data = new byte[schema.getLength()];
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Tuple.java:60: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.schema = schema;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Tuple.java:74: error: [NullAway] dereferenced expression t1 is @Nullable
        int t1cnt = t1.schema.getCount();
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Tuple.java:75: error: [NullAway] dereferenced expression t2 is @Nullable
        int t2cnt = t2.schema.getCount();
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Predicate.java:97: error: [NullAway] dereferenced expression tuple is @Nullable
            left = tuple.schema.fieldNumber((String) left);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Predicate.java:101: error: [NullAway] dereferenced expression tuple is @Nullable
            right = tuple.schema.fieldNumber((String) right);
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Predicate.java:108: error: [NullAway] dereferenced expression tuple is @Nullable
            type = tuple.schema.fieldType((Integer) lval);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Predicate.java:113: error: [NullAway] dereferenced expression tuple is @Nullable
            rval = tuple.getField((Integer) rval);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Selection.java:38: error: [NullAway] assigning @Nullable expression to @NonNull field
        schema = iter.getSchema();
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Selection.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
        schema = join2.getSchema();
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Selection.java:46: error: [NullAway] dereferenced expression iter is @Nullable
        while (iter.hasNext()) {
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Selection.java:47: error: [NullAway] dereferenced expression join2.iter is @Nullable
            Tuple t = join2.iter.next();
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Selection.java:94: error: [NullAway] dereferenced expression iter is @Nullable
        return iter.hasNext();
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Selection.java:104: error: [NullAway] dereferenced expression iter is @Nullable
        return iter.next();
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Projection.java:23: error: [NullAway] dereferenced expression this.getSchema() is @Nullable
            this.getSchema().initField(i, iter.getSchema(), fields[i]);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/Projection.java:81: error: [NullAway] dereferenced expression t is @Nullable
            newtuple.setField(i, t.getField(fields[i]));
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/SimpleJoin.java:82: error: [NullAway] dereferenced expression iter is @Nullable
        return iter.hasNext();
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9a546dbc59_ojjsaw_448p3_tgz-pJ8-tests_RelOperatorTestJ8/src/relop/SimpleJoin.java:92: error: [NullAway] dereferenced expression iter is @Nullable
        return iter.next();
                   ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
35 errors
